# ArtemSamsung

./: README.md  settings.gradle.kts
app/: Cube.java  RubikCube.java  RubikCube3D.kt  RubikCubeRenderer.java  RubiksCube.java  Simple3DRenderer.kt  TriangleRenderer.kt  build.gradle.kts
app/src/androidTest/java/com/example/artem52/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  coordcube.cpp  corecrt.h  corecrt_wdirect.h  cube-solver.cpp  cubiecube.cpp  direct.h  facecube.cpp  prunetable_helpers.cpp  sal.h  search.cpp  search.h  vadefs.h  vcruntime.h
app/src/main/java/com/example/artem52/: MainActivity.kt  RotatingCubeRenderer.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/artem52/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
